# emscripten_test

./: .gitignore  CMakeLists.txt  Makefile  README  color.h  drawable.cpp  drawable.h  point.h  rectangle.h  sdl_context.h  sdl_renderer.h  sdl_utils.h  test.cpp
include/: action.h  drawable.h  entity.h  functions.h  line.h  model.h  overloaded.h  sdl_context.h  sdl_window.h  transform.h  update.h
include/draw/: drawable.h  line.h  rectangle.h
include/geometry/: bbox.h  height.h  point.h  width.h
include/sdl/: sdl_context.h  sdl_utils.h
resources/: em_test.html  em_test_shell.html
src/: action.cpp  entity.cpp  event_loop.cpp  main.cpp  model.cpp  test.cpp  update.cpp
src/draw/: drawable.cpp  line.cpp  rectangle.cpp
